# SIFTS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  python-publish.yml
docs/: cli.md  installation.md  quickstart.md
docs/api/: base.md  global_mappings.md  index.md  mmcif.md  segments_generation.md  sequence_match.md  sifts_db_wrapper.md  sifts_fasta_builder.md  sifts_global_mappings.md  sifts_segments_generation.md  sifts_sequence_match.md  sifts_to_mmcif.md  target_database.md  unp.md
notebooks/: quickstart.ipynb
pdbe_sifts/: para_mm2fasta.py  sifts_global_mappings.py  sifts_mmcif2fasta.py  sifts_search.py  sifts_search_nf.py  sifts_segments_generation.py  taxonomy_fix_pkl.py
pdbe_sifts/base/: batchable.py  exceptions.py  log.py  parser.py  pdbe_path.py  utils.py
pdbe_sifts/config/: __init__.py  config.py  config.toml  config.yaml
pdbe_sifts/database/: sifts_db_wrapper.py
pdbe_sifts/global_mappings/: __init__.py  alignment_db.py  alignment_result_parser.py  base_alignment_search.py  blastp.py  database.py  global_mappings_parser.py  makeblastdb.py  mmseqs_search.py  query_db.py  scoring_function.py  scoring_function_helper.py  target_database.py
pdbe_sifts/mmcif/: chem_comp.py  entity.py  entry.py  mmcif_helper.py
pdbe_sifts/nextflow_process/: nextflow.config  process_search_input.nf  sifts_search.nf
pdbe_sifts/segments_generation/: get_list_of_mappings.py
pdbe_sifts/segments_generation/alignment/: helper.py
pdbe_sifts/sifts_to_mmcif/: copy_to_exchange.py  fetch_xref_data.py  modified_entries.py
pdbe_sifts/unp/: unp.py
src/pdbe_sifts/: cli.py  edit_cif.py  seq2seq.py  sifts_batch_segments.py  sifts_database_loader.py  sifts_fasta_builder.py  sifts_global_mappings.py  sifts_segments_generation.py  sifts_sequence_match.py  taxonomy_fix_pkl.py
src/pdbe_sifts/base/: batchable.py  cache.py  exceptions.py  executors.py  log.py  parser.py  paths.py  pdbe_path.py  process_remote.py  report.py  utils.py
src/pdbe_sifts/base/executors/: __init__.py
src/pdbe_sifts/base/queues/: __init__.py  batchable_queue.py  iqueue.py  local_queue.py  redis_queue.py
src/pdbe_sifts/config/: __init__.py
src/pdbe_sifts/data/: default_config.yaml  three_to_one_letter_mapping.csv
src/pdbe_sifts/database/: sifts_db_wrapper.py
src/pdbe_sifts/global_mappings/: base_alignment_search.py  blastp.py  database.py  global_mappings_parser.py  makeblastdb.py  mmseqs_search.py  scoring_function_helper.py  target_database.py
src/pdbe_sifts/mmcif/: __init__.py  chain.py  chem_comp.py  entity.py  entry.py  generate_ccd_mapping.py  mmcif_helper.py  poly_seq_scheme.py  residue.py
src/pdbe_sifts/mmcif/curator/: __init__.py  cif_sequence_update.py  pdbx_connectivity.py
src/pdbe_sifts/segments_generation/: generate_xref_csv.py  get_list_of_mappings.py
src/pdbe_sifts/segments_generation/alignment/: __init__.py  helper.py
src/pdbe_sifts/segments_generation/connectivity/: ccd_parser.py  process_connectivity.py
src/pdbe_sifts/sequence_match/: blastp.py  database.py  makeblastdb.py  mmseqs_search.py  scoring_function_helper.py  sequence_match_parser.py  target_database.py
src/pdbe_sifts/sifts_to_mmcif/: comm_utils.py  copy_to_exchange.py  def_mmcif_cat.py  delta_mappings.py  main.py  modified_entries.py  poly_seq_scheme.py  read_sifts_csv.py
src/pdbe_sifts/sifts_to_mmcif_test/: delta_mappings.py  main.py
src/pdbe_sifts/unp/: unp.py
tests/: conftest.py  test_ccd_parser.py  test_chem_comp.py  test_def_mmcif_cat.py  test_entry_id_security.py  test_exceptions.py  test_extract_entities.py  test_fasta_builder.py  test_global_mappings_parser.py  test_mmcif_helper.py  test_paths.py  test_process_connectivity.py  test_residue.py  test_score_formulas.py  test_scoring_function_helper.py  test_sequence_match_parser.py  test_sifts_align.py  test_sifts_db_wrapper.py  test_utils_pure.py
tests/data/blastp_hits/: hits.duckdb  hits_tmp.tsv
tests/data/ccd/: ALA.cif
tests/data/cif/: 1cbs.cif  1vyc.cif
tests/data/curated_mappings/: single_query.csv
tests/data/fasta/: target.fasta
tests/data/lists/: cif.list  cif_path.txt  entries.list
tests/data/mmseqs_hits/: hits.duckdb  hits_tmp.tsv  tmp.fasta
tests/data/taxmapping/: uni2tax.tsv
tests/data/unp_csv/: unp.csv
