[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdbe_sifts"
version = "1.0"
description = "Python package to run SIFTS from EMBL-EBI locally."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Adam Bellaiche", email = "adamb@ebi.ac.uk" },
    { name = "Preeti Choudhary" },
    { name = "Sreenath Sasidharan Nair" },
    { name = "Jennifer Fleming" },
    { name = "Sameer Velankar" }
]

dependencies = [
    "tqdm",
    "biopython",
    "funcy",
    "lxml",
    "requests",
    "pandas",
    "pymmseqs",
    "coloredlogs",
    "pyyaml",
    "scikit-learn",
    "ete4",
    "omegaconf",
    "gemmi",
    "duckdb",
    "platformdirs",
    "python-dateutil",
    "numpy",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdbe_sifts = ["data/*.csv", "data/*.pkl.gz", "data/*.yaml"]

[project.scripts]
pdbe_sifts = "pdbe_sifts.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3"]
redis = ["redis>=4"]

[tool.pytest.ini_options]
testpaths = ["tests"]