[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdbe_sifts"
version = "0.1.0"
description = "Python package to run SIFTS from EMBL-EBI locally."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

authors = [
    { name = "Adam Bellaiche", email = "adamb@ebi.ac.uk" },
    { name = "Preeti Choudhary" },
    { name = "Sreenath Sasidharan Nair" },
    { name = "Jennifer Fleming" },
    { name = "Sameer Velankar" }
]

dependencies = [
    "tqdm",
    "biopython",
    "funcy",
    "lxml",
    "requests",
    "pandas",
    "pymmseqs",
    "coloredlogs",
    "pyyaml",
    "scikit-learn",
    "ete4",
    "omegaconf",
    "gemmi",
    "duckdb",
    "platformdirs",
    "python-dateutil",
    "numpy",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/PDBeurope/SIFTS/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdbe_sifts = ["data/*.csv", "data/*.pkl.gz", "data/*.yaml"]

[project.scripts]
pdbe_sifts = "pdbe_sifts.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3", "ruff>=0.4", "pre-commit>=3.0"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-autorefs>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes  (unused imports, undefined names…)
    "I",    # isort     (import ordering)
    "UP",   # pyupgrade (Python 3.10+ idioms)
    "B",    # flake8-bugbear  (likely bugs & design issues)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long — enforced by the formatter
    "B008",   # function call in default arg — common in argparse
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]   # assert is fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
